# ratatoskr

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  crates.js  help.html  index.html  justfile  settings.html  src-files.js
.github/workflows/: auto-tag-features.yml  ci.yml  docs.yml  release.yml
contrib/systemd/: ratd.service
docs/: api-reference.md  errors.md  getting-started.md  index.md  providers.md  service-mode.md  streaming.md  tools.md
docs/plans/: 2026-02-01-phase1-design.md  2026-02-01-phase1-implementation.md  2026-02-02-phase2-design.md  2026-02-02-phase2-implementation.md  2026-02-02-phase3-4-local-inference.md  2026-02-03-provider-trait-refactor.md  2026-02-04-phase5-implementation.md  2026-02-04-phase5-service-mode.md  2026-02-05-phase6-model-intelligence.md  2026-02-11-phase7-operational-hardening.md  2026-02-11-v1-code-review.md  2026-02-13-keyless-openrouter-design.md  2026-02-13-keyless-openrouter.md  2026-02-13-preset-uri-resolution-design.md  2026-02-13-preset-uri-resolution.md  2026-02-13-registry-tool-design.md  2026-02-20-capabilities-unification-design.md  2026-02-20-capabilities-unification.md  2026-02-20-preset-parameters-design.md  2026-02-20-preset-parameters.md  2026-02-20-registry-tool-refresh-design.md  2026-02-20-registry-tool-refresh.md  ROADMAP-diagrams.md  ROADMAP.md  architecture.md  phase-1-diagrams.md  phase-1-plan.md  ratatoskr-extraction_chibi-centric.md
proto/: ratatoskr.proto
ratatoskr/: all.html  index.html  sidebar-items.js
ratatoskr/cache/: constant.DEFAULT_MODEL_CACHE_MAX.html  index.html  sidebar-items.js  struct.ModelCache.html
ratatoskr/convert/: fn.backend_from_model.html  fn.extract_text.html  fn.from_llm_tool_calls.html  fn.from_llm_usage.html  fn.to_llm_messages.html  index.html  sidebar-items.js
ratatoskr/error/: enum.RatatoskrError.html  index.html  sidebar-items.js  type.Result.html
ratatoskr/gateway/: index.html  sidebar-items.js  struct.EmbeddedGateway.html  struct.Ratatoskr.html  struct.RatatoskrBuilder.html
ratatoskr/providers/: index.html  sidebar-items.js
ratatoskr/registry/: constant.EMBEDDED_SEED.html  index.html  sidebar-items.js  struct.ModelRegistry.html
ratatoskr/telemetry/: constant.CACHE_HITS_TOTAL.html  constant.CACHE_MISSES_TOTAL.html  constant.PARAMETER_DISCOVERIES_TOTAL.html  constant.REQUESTS_TOTAL.html  constant.REQUEST_DURATION_SECONDS.html  constant.RETRIES_TOTAL.html  constant.TOKENS_TOTAL.html  index.html  sidebar-items.js
ratatoskr/traits/: index.html  sidebar-items.js  trait.ModelGateway.html
ratatoskr/types/: enum.ChatEvent.html  enum.FinishReason.html  enum.GenerateEvent.html  enum.MessageContent.html  enum.ModelCapability.html  enum.ModelStatus.html  enum.NliLabel.html  enum.ParameterAvailability.html  enum.ParameterName.html  enum.ParameterValidationPolicy.html  enum.ReasoningEffort.html  enum.ResponseFormat.html  enum.Role.html  enum.StanceLabel.html  enum.ToolChoice.html  index.html  sidebar-items.js  struct.Capabilities.html  struct.ChatOptions.html  struct.ChatResponse.html  struct.ClassifyResult.html  struct.Embedding.html  struct.GenerateOptions.html  struct.GenerateResponse.html  struct.Message.html  struct.ModelInfo.html  struct.ModelMetadata.html  struct.NliResult.html  struct.ParameterRange.html  struct.PricingInfo.html  struct.ReasoningConfig.html  struct.StanceResult.html  struct.Token.html  struct.ToolCall.html  struct.ToolDefinition.html  struct.Usage.html
ratatoskr/version/: constant.BUILD_TIMESTAMP.html  constant.GIT_BRANCH.html  constant.GIT_SHA.html  constant.PKG_VERSION.html  fn.build_date.html  fn.git_dirty.html  fn.short_sha.html  fn.version_string.html  index.html  sidebar-items.js
search.index/: 0030c8fd9408.js  00dccf693f79.js  016e17d37e1d.js  01b94d665f81.js  01c8482609b5.js  02125edc03f1.js  026872ba3478.js  029816055e4e.js  02fa88f61fae.js  0303508748b4.js  03422bb4b67a.js  03de8e18f1d4.js  0418d2f6a71f.js  04f8aea4204c.js  0504d2b72409.js  0513842702b2.js  058096a8a342.js  05fb471fadf7.js  05fb74b25df7.js  067b1c83f573.js  067c7570cd63.js  06c136186a46.js  07447ad5d2b9.js  07b9040f1375.js  07c97709fc63.js  082d3c4f1c61.js  085036cc36dc.js  089436f5b0d2.js  08d41c010d6c.js  0939db4f1841.js  098645946801.js  09b6f2ba10f2.js  09c2b34fb5a0.js  0aab5be6c77f.js  0ad9930f3b0c.js  0b5045268bd4.js  0b90e6a65234.js  0bfc7c7c1ba5.js  0c16bcf6bdfc.js  0cc48887d434.js  (+304 more)
search.index/crateNames/: 636f4b2a8a7a.js
search.index/desc/: 02dcbba6b23e.js  901c557e3129.js  c00983fad1d9.js
search.index/entry/: 22695ee3c90f.js  84e63eedb098.js  f86b24804df5.js
search.index/function/: 57953f5238e0.js  d60e5cd725ed.js  f0a87f225cd6.js
search.index/generic_inverted_index/: 469d30183a0b.js  6f40a3f25815.js  981f2826323b.js
search.index/name/: 693f08652077.js  8a8f17581772.js  f631e2bee1eb.js
search.index/normalizedName/: 8eebc609437f.js  a5298f853c8c.js  fc903a4ac3dd.js
search.index/path/: 0c52c76cb5c9.js  337fd22b0471.js  f4f8f8ac7d9c.js
search.index/type/: 02a1afe5b494.js  577f3b387484.js  f5e2d6e54590.js
src/: error.rs  lib.rs  telemetry.rs  traits.rs  version.rs
src/cache/: discovery.rs  mod.rs  response.rs
src/client/: mod.rs  service_client.rs
src/convert/: mod.rs
src/gateway/: builder.rs  embedded.rs  mod.rs  (+1 more)
tests/: backpressure_test.rs  cache_test.rs  capabilities_test.rs  convert_test.rs  discovery_test.rs  error_test.rs  fastembed_test.rs  fetch_metadata_test.rs  gateway_test.rs  generate_test.rs  huggingface_integration_test.rs  huggingface_live_test.rs  huggingface_test.rs  live_test.rs  local_inference_live_test.rs  message_test.rs  metrics_test.rs  model_manager_test.rs  model_metadata_test.rs  onnx_nli_test.rs  openrouter_metadata_live_test.rs  options_test.rs  parameter_test.rs  provider_fallback_test.rs  provider_params_test.rs  rat_registry_test.rs  registry_retry_test.rs  registry_test.rs  remote_registry_test.rs  response_cache_test.rs  response_test.rs  retry_config_test.rs  retry_test.rs  routing_test.rs  service_test.rs  tokenizer_test.rs  tool_test.rs  traits_test.rs  validation_test.rs
(+265 files in other folders)
