[package]
name = "ratatoskr"
version = "0.1.0-dev"
edition = "2024"
description = "Unified model gateway for LLM APIs"
license = "ISC"
repository = "https://github.com/emesal/ratatoskr"
readme = "README.md"
keywords = ["llm", "ai", "openrouter", "api", "gateway"]
categories = ["api-bindings", "asynchronous"]
rust-version = "1.85"

[features]
default = ["openai", "anthropic", "openrouter", "ollama", "google", "huggingface"]
openai = ["llm/openai"]
anthropic = ["llm/anthropic"]
openrouter = ["llm/openrouter"]
ollama = ["llm/ollama"]
google = ["llm/google"]
huggingface = ["dep:reqwest"]
local-inference = ["dep:fastembed", "dep:ort", "dep:tokenizers", "dep:hf-hub", "dep:dirs"]
cuda = ["ort/cuda"]

[dependencies]
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
llm = "1.3"
pin-project-lite = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["rt", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

# Local inference (optional)
fastembed = { version = "5", optional = true }
ort = { version = "2.0.0-rc", optional = true, default-features = false }
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["http"] }
hf-hub = { version = "0.4", optional = true }
dirs = { version = "5", optional = true }

[build-dependencies]
vergen-gitcl = { version = "1", features = ["build", "cargo"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0.4"
wiremock = "0.6"
