[package]
name = "ratatoskr"
version = "0.2.7"
edition = "2024"
description = "Unified model gateway for LLM APIs"
license = "ISC"
repository = "https://github.com/emesal/ratatoskr"
readme = "README.md"
keywords = ["llm", "ai", "openrouter", "api", "gateway"]
categories = ["api-bindings", "asynchronous"]
rust-version = "1.93"

[features]
default = ["openai", "anthropic", "openrouter", "ollama", "google", "huggingface"]
openai = ["llm/openai"]
anthropic = ["llm/anthropic"]
openrouter = ["llm/openrouter"]
ollama = ["llm/ollama"]
google = ["llm/google"]
huggingface = []
local-inference = ["dep:fastembed", "dep:ort", "dep:tokenizers", "dep:hf-hub"]
cuda = ["ort/cuda"]
server = ["dep:tonic", "dep:prost", "dep:clap", "dep:toml", "dep:tracing-subscriber"]
client = ["dep:tonic", "dep:prost", "dep:clap", "dep:tracing-subscriber"]
registry-tool = ["dep:clap", "dep:dialoguer", "dep:tracing-subscriber",
                 "openrouter", "huggingface"]

[dependencies]
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
llm = { git = "https://github.com/emesal/llm.git", branch = "emesal/ratatoskr" }
pin-project-lite = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
metrics = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
moka = { version = "0.12", features = ["future", "sync"] }

# Local inference (optional)
fastembed = { version = "5", optional = true }
ort = { version = "2.0.0-rc.11", optional = true, default-features = false }  # no stable 2.0 yet; 1.x is yanked
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["http"] }
hf-hub = { version = "0.4", optional = true }
dirs = "5"

# gRPC service mode (optional)
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
tonic = { version = "0.13", optional = true }
prost = { version = "0.13", optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
toml = { version = "0.8", optional = true }
dialoguer = { version = "0.11", optional = true }

[[bin]]
name = "ratd"
path = "src/bin/ratd.rs"
required-features = ["server"]

[[bin]]
name = "rat"
path = "src/bin/rat.rs"
required-features = ["client"]

[[bin]]
name = "rat-registry"
path = "src/bin/rat_registry.rs"
required-features = ["registry-tool"]

[build-dependencies]
vergen-gitcl = { version = "10.0.0-beta.5", features = ["build", "cargo"] }  # 9.x stable has different API; beta tracks upstream
tonic-build = "0.13"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0.4"
wiremock = "0.6"
metrics-util = { version = "0.20", features = ["debugging"] }
tempfile = "3"
